# advanced-macro-calculator

./: .gitignore  LICENSE  README.md  macro-calculator.py  setup.cfg  simple-macro-calculator.py
advanced_macro_calculator/: __main__.py  calculations.py  input_handlers.py  outputs.py
