[metadata]
name = advanced_macro_calculator
version = 1.0.0
author = Michael Trovato
author_email = mtrovato@advancedmacrocalculator.com
description = An advanced macronutrient and calorie calculator to help achieve desired body composition.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
python_requires = >=3.6

[options.entry_points]
console_scripts =
    advanced_macro_calculator = advanced_macro_calculator.__main__:main
